[tool.poetry]
name = "lol-voice"
version = "1.0.0"
readme = "README.md"
license = 'GPL-3.0-only'
authors = ["Virace <Virace@aliyun.com>"]
description = "通过解析英雄联盟游戏内WAD、BNK、WPK、BIN等文件来提取音频文件，并可以按照触发事件分类"
homepage = "https://github.com/Virace/py-bnk-extract"
repository = "https://github.com/Virace/py-bnk-extract"
keywords = ["league", "wad", "bnk"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]
include = [
    "LICENSE",
    "requirements.txt"
]
packages = [
    { include = "lol_voice" }
]
[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Virace/py-bnk-extract/issues"

[tool.poetry.group.dev.dependencies]
build = "^0.8.0"

[tool.poetry.dependencies]
python = ">=3.8"
xxhash = "^3.0.0"
zstd = "^1.5.2.5"
loguru = "^0.6.0"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
secondary = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
