[project]
name = "league-tools"
version = "0.2.1"
description = "WAD、BIN、BNK、WPK文件简单处理"
authors = [{ name = "Virace", email = "Virace@aliyun.com" }]
keywords = ["league", "wad", "bnk"]
dependencies = [
    "xxhash>=3.4.1",
    "loguru>=0.7.2",
    "zstd>=1.5.5.1",
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]
requires-python = ">= 3.8"

[project.urls]
homepage = "https://github.com/Virace/py-bnk-extract"
repository = "https://github.com/Virace/py-bnk-extract"
"Bug Tracker" = "https://github.com/Virace/py-bnk-extract/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = [
  "*.json"
]

[tool.hatch.build.targets.wheel]
packages = ["league_tools"]
exclude = [
  "*.json",
]
